# signal-fusion-engine

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  pyproject.toml
config/: sources.yaml  watchlist.yaml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts  util.ts  vite-env.d.ts
frontend/src/components/: Loader.tsx
frontend/src/pages/: Briefing.tsx  TickerDetail.tsx  Watchlist.tsx
scripts/: daily-signals.sh
src/: config.py  core.py  pipeline.py
src/agent/: dashboard.py  dashboard_cli.py  harness.py  tools.py
src/agent/prompts/: portfolio_agent.txt
src/api/: __init__.py  main.py  schemas.py
src/engines/earnings/: __init__.py  beat_miss.py  consensus.py  options_implied.py  payload_builder.py
src/engines/enrichment/: aggregator.py  analyst_revisions.py  event_calendar.py  insider_trades.py
src/engines/quantitative/: aggregator.py  model.py  price_fetcher.py  technicals.py
src/engines/sentiment/: aggregator.py  finlight_fetcher.py  scorer.py  sec_fetcher.py  sec_item_codes.py
src/meta/: formatter.py  llm_client.py  payload_builder.py
src/meta/prompts/: daily_briefing.txt  earnings_briefing.txt  signal_generation.txt
src/storage/: earnings_repo.py  enrichment_repo.py  models.py  portfolio_repo.py  quant_repo.py  sentiment_repo.py  signal_repo.py
src/tracking/: dashboard.py  scorer.py
src/tracking/templates/: dashboard.html
src/tui/: app.py  commands.py  renderer.py  widgets.py
tests/: test_agent.py  test_api.py  test_earnings.py  test_enrichment.py  test_finbert.py  test_meta.py  test_quantitative.py  test_sentiment.py  test_storage.py  test_tracking.py  test_tui.py  test_tui_pilot.py
